# job-hunter-team

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  candidate_profile.hr.yml.example  candidate_profile.yml.example  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt  setup.ps1  setup.sh  vercel.json  zizmor.yml
.dev-team/: config.sh  start-agent.sh  start.sh
.githooks/: pre-commit
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.launcher/: bridge-control.sh  config.sh  pacing-bridge.py  sentinel-bridge.py  sentinel-ticker.py  start-agent.sh  start.sh  tui-helpers.sh
cli/: package-lock.json  package.json
desktop/: .gitignore  container-prep.js  container-prep.test.js  container.js  dependencies.js  dependencies.test.js  deps.js  deps.test.js  disk-space.js  disk-space.test.js  main.js  package-lock.json  package.json  payload.js  payload.test.js  preload.js  provider-auth.js  provider-auth.test.js  provider-install.js  provider-install.test.js  provider-store.js  provider-store.test.js  runtime.js  runtime.test.js  terminal.js
docs/: AI-AGENT-INTEGRATION.md  BETA.md  (+23 more)
launcher/: Cargo.toml  build.rs
launcher/assets/: app.manifest
launcher/scripts/: build-macos.sh
launcher/src/: bootstrap.rs  config.rs  log.rs  main.rs  prereqs.rs  repo.rs  server.rs  tray.rs  ui.rs  wizard.rs
launcher/src/bootstrap/: macos.rs  mod.rs  windows.rs
(+1514 files in other folders)
