[package]
name = "jht-launcher"
version = "0.1.0"
edition = "2021"
description = "Lightweight launcher for Job Hunter Team"

[dependencies]
open = "5"
shared_child = "1"
sha2 = "0.10"
native-windows-gui = "1.0.13"
tray-item = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
