[package]
name = "jht-launcher"
version = "0.1.0"
edition = "2021"
description = "Lightweight launcher for Job Hunter Team"

[dependencies]
muda = "0.15"
open = "5"
shared_child = "1"
sha2 = "0.10"
tao = "0.34"
wry = "0.51"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
